# FlatSat

./: LICENSE  README.md  ground.py  main.py  mem.txt  pyproject.toml  shake.py  tpix
ground/: ground.py  gui.py  lunar_landing_analyzer.py  main.py  pyproject.toml  stitching.py
ground/captures/: snap_1768838099.json  snap_1768838104.json  snap_1768838426.json  snap_1768838433.json  snap_1768838439.json  snap_1768838442.json  snap_1768838445.json  snap_1768838454.json  snap_1768838456.json  snap_1768838459.json  snap_1768839629.json  snap_1768839638.json  snap_1768839700.json  snap_1771095508.json  snap_1771095549.json  snap_1771095566.json  snap_1771720771.json  snap_1773961292.json  snap_1773961309.json  snap_1773961317.json  snap_1773962192.json  snap_1773962198.json  snap_1773962217.json  snap_1773963870.json
ground/templates/: dashboard.html
ground/web/templates/: dashboard.html
realtimegs/: btnode.py  config.py  main.py
realtimegs/data/: scan_20251221_150303.json  scan_20251221_150953.json  scan_20251221_150955.json  scan_20251221_150956.json  scan_20251221_151004.json
realtimegs/hardware/: camera.py  imu.py  power.py
realtimegs/web/: server.py
realtimegs/web/templates/: dashboard.html
